# folder_compressor

./: README.md  pyproject.toml
src/folder_compressor/: __init__.py
