[project]
name = "folder-compressor"
version = "0.1.0"
description = "A simple tool to compress a folder of JPGs to webp files."
authors = [
    { name = "felix", email = "f.ceard-falkenberg@uu.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "tqdm>=4.67.3",
]

[project.scripts]
compress-images = "folder_compressor:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
